--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,16 @@
 			<artifactId>spring-security-config</artifactId>
 			<version> 6.2.4</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix-core</artifactId>
+            <version>1.4.7.RELEASE</version>
+        </dependency>
+		<dependency>
+			<groupId>io.github.openfeign</groupId>
+			<artifactId>feign-core</artifactId>
+			<version>12.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
