--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 server.port=8080
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.data.rest.base-path=/data-api
