--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=mgschool
 spring.datasource.url=jdbc:mysql://localhost:3306/school
 spring.datasource.username=root
-spring.datasource.password=05377048490m
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
 spring.jpa.show-sql=true
